[fix] nav overflow at mini mobiles

--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -5,12 +5,16 @@
     align-items: center;
     background: linear-gradient(to bottom, #549f4c 100%, #549f4c 90%);
     > a {
+        display: none;
         text-decoration: none;
         color: white;
         font-size: 1.2rem;
         font-weight: 300;
         letter-spacing: 1px;
         margin: .5rem 1.5rem;
+        &.mini {
+            display: block;
+        }
     }
     > div {
         display: flex;
@@ -44,8 +48,18 @@
             }
         }
     }
-    &.extended {
-        justify-content: space-between;
+}
+
+@media screen and (min-width: 375px) {
+    :host {
+        justify-content: center;
+        > a {
+            display: block;
+            
+        }
+        &.extended {
+            justify-content: space-between;
+        }
     }
 }
 
